added Make-based framework

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="./main.css">
-    </head>
-<body>
-    <p> Hi :)</p>
+        <link rel="stylesheet" type="text/css" href="main.css">
+    </head><h1 id="index">Index</h1>
+<p>Hello from index.md</p>
+<p><a href="intro_components.html">intro to components</a></p>
+
 </body>
 </html>
