--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="./main.css">
-    </head>
-<body>
-    <p> Hi :)</p>
+        <link rel="stylesheet" type="text/css" href="main.css">
+    </head><h1 id="index">Index</h1>
+<p>Hello from index.html</p>
+<h2 id="hardware"><a href="hardware">hardware</a></h2>
+<ul>
+<li><a href="led_resistor.html">A word on LEDs and resistors</a></li>
+</ul>
+
 </body>
 </html>
