--- a/led_resistor.html
+++ b/led_resistor.html
@@ -1,9 +1,14 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="main.css">
+
+<meta charset="UTF-8">
+
+        <link rel="stylesheet" type="text/css" href="/main.css">
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-    </head><h1 id="regarding-leds-and-resistors">Regarding LEDs and resistors</h1>
+    </head>
+    <body>
+        <a href="/index.html">site home</a> &nbsp<h1 id="regarding-leds-and-resistors">Regarding LEDs and resistors</h1>
 <p>LEDs are among the simplest output devices to use in a digital system, and as such they are among the most common, both in hobbyist projects and complex commercial devices, possibly including the screen you’re using right now. A common mistake I see on electronics forums is <a href="https://www.reddit.com/r/beneater/search?q=resistor%20led&amp;restrict_sr=1">people not using resistors in series with their LEDs</a> - a lot of times, the circuit will seem to work even if these resistors are omitted, so many beginning designers will omit them and then wonder why other components in their circuit don’t work. It doesn’t help that most tutorials don’t cover the underlying physics in much detail. So today, that’s what I’ll be doing.</p>
 <p>I should note that this is a ‘long-answer’ article - it’s mostly about the underlying theory of our devices, rather than anything practical. Feel free to skip it.</p>
 <h2 id="what-is-an-led">What is an LED</h2>
@@ -19,10 +24,11 @@
 <p>This has the problem, that since logic signals and wires both aren’t intended to be resistors, they tend to have small resistances, which means high currents. More precisely, <span class="math inline">\(V=IR\)</span>. The voltage to be dropped by the wires and logic circuits is the 5V ideal logic level - the 2V resistor drop = <span class="math inline">\(5V-2V=3V\)</span>. Some measurements with a breaboard of my own suggests resistances are typically in the range of <span class="math inline">\(1\Omega\)</span> for wiring components. This gives us a current of <span class="math inline">\(\frac{3V}{1\Omega}=3A\)</span>. Even allowing for massive error margins on our numbers, that is an extreme current for logic systems - the LEDs themselves, for instance, typically have maximum safe currents of <span class="math inline">\(20mA\)</span>, orders of magnitude less.</p>
 <p>While not every logic family will produce destructive currents (well-protected TTL logic such as the <code>74LSxx</code> series, for instance, can appear to work just fine under some conditions), there is another, somewhat more insidious problem:</p>
 <h2 id="problem-2-corrupted-signal-voltage.">Problem 2: corrupted signal voltage.</h2>
-<p>Logic gates aren’t designed to expect any possible voltage. Instead, they have 3 main voltage ranges for their inputs: the 0 and 1 levels of digital logic, and an invalid range in between. This invalid range isn’t meant to be used, and devices are designed for their inputs to only be in this range briefly, when their input crosses from 1 to 0 (or vice versa).</p>
-<p>The maximum voltage that will reliably be read as a logic <code>0</code> is referred to as <span class="math inline">\(V_{IL}\)</span>, and the lowest voltage that will be read as a <code>1</code> is <span class="math inline">\(V_{IH}\)</span>. The exact values of these voltages depends on the exact chip, and they’re typically specified in the datasheet.</p>
-<p>The outputs also have corresponding values, <span class="math inline">\(V_{OH}\)</span> and <span class="math inline">\(V_{OL}\)</span>, indicating (respectively) the lowest voltage the device will output to indicate a 1, and the highest value it’ll output to indicate a 0.</p>
+<p>Logic gates aren’t designed to expect any possible voltage. Instead, they have 3 main voltage ranges for their inputs: the 0 and 1 levels of digital logic, and an invalid range in between. The details depend on the logic gates in question; as an example, An example TTL chip, the <a href="https://www.futurlec.com/74LS/74LS00.shtml"><code>DM74LS00</code></a>, has <span class="math inline">\(V_{IH}=2.0V\)</span> and <span class="math inline">\(V_{OH} =2.7V\)</span>$. What this means is, it’ll output 2.7V for a logic <code>1</code>, but (to allow for noise and bus resistance) it’ll read anything over 2.0V as a <code>1</code>.</p>
 <p>(I’ll mostly focus on the case of a logic <code>1</code> here, because that’s where the problem is most likely to occur.)</p>
-<p>There are 2 general types of chips, that you’re likely to use for a digital logic project: TTL and CMOS. An example TTL chip, the <a href="https://www.futurlec.com/74LS/74LS00.shtml"><code>DM74LS00</code></a>, has <span class="math inline">\(V_{IH}=2.0V\)</span> and <span class="math inline">\(V_{OH} =2.7V\)</span>$, with other TTL chips being similar; while CMOS chips usually have <span class="math inline">\(V_{IH} \approx V_{OH} \approx V_{DD}\)</span>, where <span class="math inline">\(V_{DD}\)</span> is the power supply voltage.</p>
+<p>You’ll notice, this 2.0V threshold for a 1 to be read, is exactly the voltage drop for my LEDs, which means that if yours have a slightly lower voltage drop, or your chips have a slightly higher <span class="math inline">\(V_{IH}\)</span>, or there is any voltage lost in the bus, you won’t get reliable behavior.</p>
+<p>Best-case, you’ll get a random value of either 1 or 0. But, worst-case, you can draw extreme ammounts of power and even damage the chip, especially with <a href="/logic_families/cmos.html">CMOS</a>, due to how they connect their output to either <span class="math inline">\(V_{dd}\)</span> or <span class="math inline">\(V_{ss}\)</span>, and if you accidentally provide a voltage they aren’t expecting, you can cause them to accidentally connect their outputs to both, creating a short. (During normal operation, this briefly happens during switching; it’s responsible for most CMOS power consumption.)</p>
+&nbsp;
+<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
 </body>
 </html>
