critique: But How Do It Know

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
 <ul>
 <li><a href="hardware_techniques/component_selection.html">Component selection</a></li>
 </ul>
+<h2 id="other-similar-resources">Other similar resources</h2>
+<ul>
+<li><a href="/other_resources/other_resources.html">A collection of online resources</a></li>
+<li><a href="/other_resources/but_how_do_it_know.html">But How Do It Know</a></li>
+</ul>
 &nbsp;
 <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
 </body>
