--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 <li><a href="about/about_the_creator.html">About the creator</a></li>
 <li><a href="about/license.html">License</a></li>
 </ul>
-<h2 id="hardware"><a href="hardware">hardware</a></h2>
+<h2 id="hardware">hardware</h2>
 <ul>
 <li><a href="led_resistor.html">A word on LEDs and resistors</a></li>
-<li><a href="hardware_techniques/digital_to_electronic.html">Translating a digital design to an electronic circuit</a></li>
 </ul>
 <h2 id="hardware-techniques">Hardware techniques</h2>
 <ul>
 <li><a href="hardware_techniques/component_selection.html">Component selection</a></li>
+<li><a href="hardware_techniques/digital_to_electronic.html">Translating a digital design to an electronic circuit</a></li>
 </ul>
 <h2 id="other-similar-resources">Other similar resources</h2>
 <ul>
