Added initial content

--- a/index.html
+++ b/index.html
@@ -8,7 +8,21 @@
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     </head>
     <body>
-        <a href="/index.html">site home</a> &nbsp<h1 id="index">Index</h1>
+        <a href="/index.html">site home</a> &nbsp<h1 id="the-touchback-screen">The Touchback Screen</h1>
+<p>(video goes here)</p>
+<h2 id="what-it-is">What it is</h2>
+<p>Regular touchscreens are great, but they have one massive problem.
+You can’t use a touchscreen by feel. That’s where the touchback screen
+comes in. By using a force-sensing system and a series of vibration
+motors, the touchback screen lets you feel where on the screen your
+finger is.</p>
+<h2 id="how-it-works">How it works</h2>
+<p>The touchback screen uses a regular capacitive touch screen, mounted
+on a force sensor. The capacitive screen tracks where the user’s finger
+is, and a series of vibration motors give feedback whenever the user’s
+finger moves between parts of the interfact. When the user presses
+firmly on the screen, the force sensor registers that as a press, which
+is signalled to the user via the same vibration motors.</p>
 &nbsp;
 <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
 </body>
