added stylized schematic

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@ comes in. By using a force-sensing system and a series of vibration
 motors, the touchback screen lets you feel where on the screen your
 finger is.</p>
 <h2 id="how-it-works">How it works</h2>
+<p>(stylized schematic goes here)</p>
+<svg height="300" width="100">
+<rect x = 40 y = 0 width=10 height=300 style="fill:rgb(0,255,0);stroke-width:3;stroke:rgb(0,0,0)" / >
+<rect x = 50 y = 0 width=10 height=300 style="fill:rgb(0,0,255);stroke-width:3;stroke:rgb(0,0,0)" / >
+</svg>
 <p>The touchback screen uses a regular capacitive touch screen, mounted
 on a force sensor. The capacitive screen tracks where the user’s finger
 is, and a series of vibration motors give feedback whenever the user’s
