removed schematic placeholder

--- a/index.html
+++ b/index.html
@@ -17,10 +17,26 @@ comes in. By using a force-sensing system and a series of vibration
 motors, the touchback screen lets you feel where on the screen your
 finger is.</p>
 <h2 id="how-it-works">How it works</h2>
-<p>(stylized schematic goes here)</p>
 <svg height="300" width="100">
-<rect x = 40 y = 0 width=10 height=300 style="fill:rgb(0,255,0);stroke-width:3;stroke:rgb(0,0,0)" / >
-<rect x = 50 y = 0 width=10 height=300 style="fill:rgb(0,0,255);stroke-width:3;stroke:rgb(0,0,0)" / >
+<rect x = 40 y = 0 width=10 height=300 style="fill:rgb(0,255,0)" />
+<rect x = 50 y = 0 width=10 height=300 style="fill:rgb(0,0,255)" />
+<rect x=30 y=0 width=10 height=10 style="fill:rgb(255,0,0)"/>
+<rect x=30 y=96.6 width=10 height=10 style="fill:rgb(255,0,0)"/>
+<rect x=30 y=193.3 width=10 height=10 style="fill:rgb(255,0,0)"/>
+<rect x=30 y=290 width=10 height=10 style="fill:rgb(255,0,0)"/>
+<rect x=20 y=0 width=10 height=300 style="fill:rgb(127,127,127)"/>
+<rect x=10 y=36.25 width=2 height=20 style="fill:rgb(160,160,160)"/>
+<rect x=10 y=37.25 width=9 height=8 style="fill:rgb(160,160,160)"/>
+<rect x=0 y=46.25 width=20 height=20 style="fill:rgb(191,191,191)"/>
+<rect x=10 y=108.75 width=2 height=20 style="fill:rgb(160,160,160)"/>
+<rect x=10 y=109.75 width=9 height=8 style="fill:rgb(160,160,160)"/>
+<rect x=0 y=118.75 width=20 height=20 style="fill:rgb(191,191,191)"/>
+<rect x=10 y=181.25 width=2 height=20 style="fill:rgb(160,160,160)"/>
+<rect x=10 y=182.25 width=9 height=8 style="fill:rgb(160,160,160)"/>
+<rect x=0 y=191.25 width=20 height=20 style="fill:rgb(191,191,191)"/>
+<rect x=10 y=253.75 width=2 height=20 style="fill:rgb(160,160,160)"/>
+<rect x=10 y=254.75 width=9 height=8 style="fill:rgb(160,160,160)"/>
+<rect x=0 y=263.75 width=20 height=20 style="fill:rgb(191,191,191)"/>
 </svg>
 <p>The touchback screen uses a regular capacitive touch screen, mounted
 on a force sensor. The capacitive screen tracks where the user’s finger
