added software flowchart, about section

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ finger is.</p>
 <rect x=70 y=280 width=20 height=20 style="fill:rgb(191,191,191)"/>
 <text x=90 y=290 fill="white">&lt;- motor</text>
 </svg>
-<!--TODO enlarge, add key-->
+<p><img src=software.svg /></p>
 <p>The touchback screen uses a regular capacitive touch screen, mounted
 on a force sensor. The capacitive screen tracks where the user’s finger
 is, and a series of vibration motors give feedback whenever the user’s
@@ -57,8 +57,29 @@ finger moves between parts of the interfact. When the user presses
 firmly on the screen, the force sensor registers that as a press, which
 is signalled to the user via the same vibration motors.</p>
 <h2 id="how-to-get-one">How to get one</h2>
+<h2 id="who-built-it">Who built it</h2>
+<ul>
+<li>Emmeryn Maria Gelblicht (she/her)
+<ul>
+<li>B.S. Computer Engineering @ UCSD - Graduating June 2023
+(planned)</li>
+</ul></li>
+<li>Lei Chen
+<ul>
+<li>B.S. Math&amp;CS <span class="citation"
+data-cites="UCSD">@UCSD</span></li>
+<li>ECE 196</li>
+</ul></li>
+<li>William Tsui
+<ul>
+<li>B.S. Electrical Engineering @ UCSD
+<ul>
+<li>Graduating June 2024 (planned)</li>
+</ul></li>
+</ul></li>
+</ul>
 &nbsp;
-Website copyright 2023 Emmeryn Maria Gelblicht. &nbsp;
+Website copyright 2023 Emmeryn Maria Gelblicht, William Tsui, Lei Chen. &nbsp;
 <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png"/></a><br/>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
 </body>
 </html>
